Fixed blurry logo issue, adjusted logo size to more appropriate dimensions.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 }
 
 #doit-logo {
-    height: 40px;
+    height: 30px;
     width: auto;
 }
 
